[package]
name = "mineshieldv2-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
threadpool = "1.8.1"
byteorder = "1.5.0"
log = "0.4.22"
env_logger = "0.11.5"
tokio = { version = "1.0", features = ["full"] }
lazy_static = "1.4"
dns-lookup = "2.0.4"
proxy-protocol = "0.5.0"
bytes = "1.6.1"
ratatui = "0.29.0"
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34+deprecated"
serde_json = "1.0.140"
[target.aarch64-unknown-linux-gncu]
linker = "aarch64-linux-gnu-gcc"
